# pipecat-quickstart

./: .dockerignore  .gitignore  .python-version  API_REFERENCE.md  DEPLOYMENT_README.md  Dockerfile  Procfile  __init__.py  bot.py  env.example  gunicorn.conf.py  production.py  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_minimal.txt  runner.py  sevalla.yml  simple_test.py  start.sh  test_banana_defaults.py  test_deployment.py  videobot.py
templates/: index.html  webrtc_client.html
