[project]
name = "pipecat-quickstart"
version = "0.1.0"
description = "Quickstart example for building voice AI bots with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "gunicorn>=23.0.0",
    "pipecat-ai[cartesia,daily,deepgram,heygen,openai,runner,silero,webrtc]>=0.0.79",
    "pipecatcloud>=0.2.4",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.35.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "loguru>=0.7.0",
    "click>=8.0.0",
    "daily-python>=0.10.0",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
